fixed spacing and tag

--- a/src/styles/battleArena.scss
+++ b/src/styles/battleArena.scss
@@ -23,7 +23,6 @@
     padding-block: 1rem;
 
     div {
-        height: 100%;
         width: 100%;
         text-align: center;
     }
